--- a/pviewer5/pviewer5.csproj
+++ b/pviewer5/pviewer5.csproj
@@ -53,12 +53,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MACTools.xaml.cs">
+      <DependentUpon>MACTools.xaml</DependentUpon>
+    </Compile>
     <Compile Include="QuickFilterDialog.xaml.cs">
       <DependentUpon>QuickFilterDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
+    <Page Include="MACTools.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
