--- a/pviewer5/pviewer5.csproj
+++ b/pviewer5/pviewer5.csproj
@@ -53,6 +53,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="IPv4Tools.xaml.cs">
+      <DependentUpon>IPv4Tools.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MACTools.xaml.cs">
       <DependentUpon>MACTools.xaml</DependentUpon>
     </Compile>
@@ -62,6 +65,10 @@
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
+    <Page Include="IPv4Tools.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MACTools.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
