--- a/pviewer5/pviewer5.csproj
+++ b/pviewer5/pviewer5.csproj
@@ -56,6 +56,9 @@
     <Compile Include="IPv4Tools.xaml.cs">
       <DependentUpon>IPv4Tools.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ItemTabulationPopup.xaml.cs">
+      <DependentUpon>ItemTabulationPopup.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MACTools.xaml.cs">
       <DependentUpon>MACTools.xaml</DependentUpon>
     </Compile>
@@ -66,6 +69,10 @@
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
     <Page Include="IPv4Tools.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ItemTabulationPopup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
