--- a/pviewer5/App.config
+++ b/pviewer5/App.config
@@ -1,6 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="pviewer5.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <pviewer5.Properties.Settings>
+            <setting name="WindowPositionMain" serializeAs="String">
+                <value>0,0,0,0</value>
+            </setting>
+            <setting name="WindowPositionPacketViewer" serializeAs="String">
+                <value>0,0,0,0</value>
+            </setting>
+            <setting name="LastDirectory" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastFile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DisplayIP4InHex" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DisplayIP4Aliases" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DisplayMACAliases" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="WindowPositionStreamViewer" serializeAs="String">
+                <value>0,0,0,0</value>
+            </setting>
+        </pviewer5.Properties.Settings>
+    </userSettings>
 </configuration>
