--- a/pviewer5/pviewer5.csproj
+++ b/pviewer5/pviewer5.csproj
@@ -68,6 +68,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PacketViewer.xaml.cs">
+      <DependentUpon>PacketViewer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Protocols HTTP.cs" />
     <Compile Include="Protocols ARP.cs" />
     <Compile Include="Protocols DHCP.cs" />
@@ -91,6 +94,9 @@
     </Compile>
     <Compile Include="Protocols TCP.cs" />
     <Compile Include="Protocols UDP.cs" />
+    <Compile Include="StreamViewer.xaml.cs">
+      <DependentUpon>StreamViewer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
@@ -118,7 +124,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PacketViewer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="QuickFilterDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="StreamViewer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
