mid-stream implementing filters, this commit is just before revamping IP4Tools and Mactools to be non-static and to us INotifyPropertyChanged to tell other parts of the GUI (like the filter) when the global settings changed

--- a/pviewer5/pviewer5.csproj
+++ b/pviewer5/pviewer5.csproj
@@ -68,6 +68,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Filter.cs" />
     <Compile Include="PacketViewer.xaml.cs">
       <DependentUpon>PacketViewer.xaml</DependentUpon>
     </Compile>
