after changing ip4util to a regular class with singleton implementation, and successfully binding a data template property to the IP4Hex global property

--- a/pviewer5/App.config
+++ b/pviewer5/App.config
@@ -22,13 +22,13 @@
             <setting name="LastFile" serializeAs="String">
                 <value />
             </setting>
-            <setting name="DisplayIP4InHex" serializeAs="String">
+            <setting name="IP4Hex" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="DisplayIP4Aliases" serializeAs="String">
+            <setting name="ShowIP4Aliases" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="DisplayMACAliases" serializeAs="String">
+            <setting name="ShowMACAliases" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="WindowPositionStreamViewer" serializeAs="String">
