all seems to be working, before re-factoring hex display utility functions and building out data templates

--- a/pviewer5/App.config
+++ b/pviewer5/App.config
@@ -25,10 +25,7 @@
             <setting name="IP4Hex" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="ShowIP4Aliases" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ShowMACAliases" serializeAs="String">
+            <setting name="UseAliases" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="WindowPositionStreamViewer" serializeAs="String">
