--- a/pviewer5/Properties/Settings.settings
+++ b/pviewer5/Properties/Settings.settings
@@ -17,10 +17,7 @@
     <Setting Name="IP4Hex" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="ShowIP4Aliases" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
-    </Setting>
-    <Setting Name="ShowMACAliases" Type="System.Boolean" Scope="User">
+    <Setting Name="UseAliases" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="WindowPositionStreamViewer" Type="System.Windows.Rect" Scope="User">
