Re-factored into GUIUtil class, but do not yet have hex multivalueconverter working

--- a/pviewer5/App.config
+++ b/pviewer5/App.config
@@ -22,7 +22,7 @@
             <setting name="LastFile" serializeAs="String">
                 <value />
             </setting>
-            <setting name="IP4Hex" serializeAs="String">
+            <setting name="Hex" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="UseAliases" serializeAs="String">
