--- a/pviewer5/Properties/Settings.settings
+++ b/pviewer5/Properties/Settings.settings
@@ -14,7 +14,7 @@
     <Setting Name="LastFile" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="IP4Hex" Type="System.Boolean" Scope="User">
+    <Setting Name="Hex" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="UseAliases" Type="System.Boolean" Scope="User">
