wip - now autosave/autoload filter on app stop/start; - also have started to add different types of filters

--- a/pviewer5/pviewer7.csproj
+++ b/pviewer5/pviewer7.csproj
@@ -70,6 +70,7 @@
     </ApplicationDefinition>
     <Compile Include="Filter.cs" />
     <Compile Include="GUIUtil.cs" />
+    <Compile Include="MyButton.cs" />
     <Compile Include="PacketViewer.xaml.cs">
       <DependentUpon>PacketViewer.xaml</DependentUpon>
     </Compile>
