--- a/pviewer5/pviewer7.csproj
+++ b/pviewer5/pviewer7.csproj
@@ -99,6 +99,9 @@
     <Compile Include="StreamViewer.xaml.cs">
       <DependentUpon>StreamViewer.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TestDataGrid.xaml.cs">
+      <DependentUpon>TestDataGrid.xaml</DependentUpon>
+    </Compile>
     <Page Include="FileLoadStatusDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -132,6 +135,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="StreamViewer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TestDataGrid.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
